--- a/Read/ReadMeWiki/04.架构设计/07.项目重构演进之路.md
+++ b/Read/ReadMeWiki/04.架构设计/07.项目重构演进之路.md
@@ -19,26 +19,28 @@
     - 3.4 mock业务数据
     - 3.5 发现代码bug
     - 3.6 优化编码方式
-- 04.是否重构辩论
-    - 4.1 针对复杂场景
-- 05.避免重构失败
-    - 5.1 能否给充足理由
-    - 5.2 乱套设计模式
-    - 5.3 先有问题后改造
+- 04.避免重构失败
+    - 4.1 能否给充足理由
+    - 4.2 乱套设计模式
+    - 4.3 先有问题后改造
+- 05.架构设计思考
+    - 5.1 针对复杂场景
+    - 5.2 如何做架构设计
+
 
 
 
 ### 01.整体概述说明
 #### 1.1 重构的背景
-- 对于大的架构重构，其实一直很谨慎的
-    - 原则是将重构融合在每次迭代中，逐步优化代码的结构。然后将这个工作持续进行下去！
-- 当初设计的架构让项目的依赖关系越来越复杂，维护成本也越来越高
+- 项目的代码往往牵一发而动全身，业务逻辑耦合严重。
+    - 对于大的架构重构，其实一直很谨慎的。原则是将重构融合在每次迭代中，逐步优化代码的结构。然后将这个工作持续进行下去！
+- 当初设计的架构让项目的依赖关系越来越复杂，维护成本也越来越高。
     - 决定梳理并优化一下整个项目结构。在实施过程中，依然坚持将整个重构的过程融合在每个迭代中，逐步完成一次大的架构升级。
 
 
 
 #### 1.2 重构的要求
-- 重构代码对一个工程师能力的要求，要比单纯写代码高得多。
+- 重构代码对一个工程师能力的要求，要比单纯写代码高得多
     - 重构需要你能洞察出代码存在的坏味道或者设计上的不足，并且能合理、熟练地利用设计思想、原则、模式、编程规范等理论知识解决这些问题。
 - 提高代码的质量
     - 具体点说就是，提高代码的可读性、可扩展性、可维护性等。
@@ -73,7 +75,7 @@
     - 明确架构层级及各个模块所在的层级
     - 提高整个架构横向扩展的能力
     - 各模块独立开发，面向接口和协议编程
-    - 提高代码可维护性
+    - 提高代码可维护性和可读性
 
 
 
@@ -103,7 +105,7 @@
     - 要提前做好完善的重构计划，有条不紊地分阶段来进行。每个阶段完成一小部分代码的重构，然后提交、测试、运行，发现没有问题之后，再继续进行下一阶段的重构，保证代码仓库中的代码一直处于可运行、逻辑正确的状态。
     - 每个阶段，我们都要控制好重构影响到的代码范围，考虑好如何兼容老的代码逻辑，必要的时候还需要写一些兼容过渡代码。
 - 小规模低层次的重构
-    - 因为影响范围小，改动耗时短，所以，随时都可以去做。
+    - 因为影响范围小，改动耗时短，所以，随时都可以去做。按照分，拆的思想不断优化代码。
 - 借助工具分析代码问题重构
     - 除了人工去发现低层次的质量问题，还可以借助很多成熟的静态代码分析工具（比如FindBugs、PMD），来自动发现代码中的问题，然后针对性地进行重构优化。
 
@@ -135,7 +137,8 @@
 #### 3.2 把握关键节点
 - 比如针对该例子关键点
     - 第一个关键点：依赖错综复杂，那么就需要划分层次图，将App的架构设计分层。比如基础层，组件层，服务层，业务层，壳工程。然后定义好从上到下的关系，这样依赖就清晰明了！
-    - 第二个关键点：上层修改成本高，那这个时候能够根据业务抽象一套交互的接口
+    - 第二个关键点：上层修改成本高，那这个时候能够根据业务抽象一套交互的接口。
+    - 第三个关键点：代码的结构层次情绪，视图层，数据处理层，业务层等层次清晰。低耦合！
 
 
 #### 3.3 编写测试用例
@@ -154,23 +157,23 @@
 
 #### 3.5 发现代码bug
 - 积极发现代码bug很重要
-    - 在代码演进中，bug避免重复出现很重要。作为实践写代码，这个过程自测case罗列一下，然后自测，自测一项勾选一项
+    - 在代码演进中，bug避免重复出现很重要。作为实践写代码，这个过程自测case罗列一下，然后自测，自测一项勾选一项。
 
 
 #### 3.6 优化编码方式
 - 了解敌人——丑陋的代码
     - 臃肿的类：开发者不去思考这些功能是不是应该放在这同一个类中，导致这些类会变得很臃肿，造成一个类几千行，让下一个接盘侠欲哭无泪。
     - 臃肿的方法：好几十上百行的一个函数堆在一块，用面向过程的思想来写代码，建议一个方法代码行数不超过80。
-    - 函数参数过多：函数参数过多会导致调用者对方法难以理解，参数弄混。想象一下一个函数连续传5个int值参数，能分清谁是谁吗?建议可以将参数组成一个对象传入。
+    - 函数参数过多：函数参数过多会导致调用者对方法难以理解，参数弄混。建议可以将参数组成一个对象传入。
     - 层层嵌套的判断：如果逻辑不复杂尽量减少if-else的分支包裹，太难阅读。比如不满足条件了直接return，不走其他代码，这样可以减少一层嵌套。
-    - 满篇跑的常量值：一个类里面出现各种未命名的常量值。0，1，200等等铺天盖地。这种状态码意义改了，改代码会把你改哭的。难道就不能先声明一个统一的常量变量来使用吗。
+    - 满篇跑常量值：一个类里面出现各种未命名的常量值。0，1，2等等铺天盖地。这种状态码意义改了，改代码会把你改哭的。难道就不能先声明一个统一的常量变量来使用吗。
     - 模棱两可的命名：不能根据名字一眼看懂它的功能的命名不是一个好命名。当然生僻的单词除外。模糊的，没有功能意义的命名会给阅读造成很大困难。
 - 优化编码的具体操作
-    - 分拆大函数：当函数比较大了，就可以根据功能节点分拆成多个小函数，也许其中的小函数还可以公用。比如结算购物车，包括计算各类商品的总价，再计算折扣，再计算满减优惠，。分别拆分成三个，一眼就能看出这段逻辑先后做了什么。
+    - 分拆大函数：当函数比较大了，就可以根据功能节点分拆成多个小函数，也许其中的小函数还可以公用。比如结算购物车，包括计算各类商品的总价，再计算折扣，再计算满减优惠。分别拆分成三个，一眼就能看出这段逻辑先后做了什么。
     - 封装到父类：如果多各类要执行相似的功能和代码，可以把该方法放到它们的父类中，或者提取出来成业务工具类。
-    - 针对类臃肿：方法迁移，遵守“单一职责”原则，当类中的方法不适合放在当前类中时，就应该为该方法寻找合适下家。移到与方法耦合大的类中。当一个方法被其他类使用比在它所在类中的使用还要频繁时，我们就需要使用迁移方法重构了——将方法迁移到更频繁地使用它的类中。
+    - 针对类臃肿：方法迁移，遵守“单一职责”原则，当类中的方法不适合放在当前类中时，就应该为该方法寻找合适下家。移到与方法耦合大的类中。
     - 搬移字段：当在一个类中的某一个字段，被另一个类的对象频繁使用时，我们就应该考虑将这个字段的位置进行更改了
-    - 提炼类：一个类如果过于复杂，做了好多的事情，违背了“单一职责”的原则，所以需要将其可以独立的模块进行拆分，当然有可能由一个类拆分出多个类。对类的细化也是为了减少代码的重复性，以及提高代码的复用性，便于代码的维护。
+    - 提炼类：一个类如果过于复杂，做了好多的事情，违背了“单一职责”的原则，所以需要将其可以独立的模块进行拆分，当然有可能由一个类拆分出多个类。对类细化。
     - 提升方法、字段：将方法向继承链上层迁移的过程。用于一个方法被多个实现者使用时。在继承的体系中，当多个类使用了相同或类似的方法，就可以考虑将该方法抽取到基类，没有基类就创建一个。字段提升同方法。
     - 降低方法：即父类抽象方法让多个子类实现。多个子类有相同的功能但是有各个具体的实现方法，那么这种封装就可以用多态性了，父类创建一个抽象方法，将方法实现降低到子类。
     - 重复代码的提炼：有时候为了赶项目进度，尽快完成功能，会偷懒将实现功能的一片代码复制一遍，直接套用。这种把多余的删掉，保留一个，也许只需传一两个参数就可以封成一个方法供多处调用。
@@ -178,32 +181,21 @@
     - 补加注释：对于全局变量，公用函数，逻辑复杂的地方添加注释，弥补之前的遗漏。
 
 
-### 04.是否重构辩论
-#### 4.1 针对复杂场景
-- 设计模式要干的事情就是解耦
-    - 也就是利用更好的代码结构将一大坨代码拆分成职责更单一的小类，让其满足高内聚低耦合等特性。
-    - 创建型模式是将创建和使用代码解耦，结构型模式是将不同的功能代码解耦，行为型模式是将不同的行为代码解耦。而解耦的主要目的是应对代码的复杂性。设计模式就是为了解决复杂代码问题而产生的。
-- 根据是否复杂投入时间
-    - 对于复杂代码，比如项目代码量多、开发周期长、参与开发的人员多，我们前期要多花点时间在设计上，越是复杂代码，花在设计上的时间就要越多。
-    - 如果你参与的只是一个简单的项目，代码量不多，开发人员也不多，那简单的问题用简单的解决方案就好，不要引入过于复杂的设计模式，将简单问题复杂化。
 
-
-
-
-### 05.避免重构失败
-#### 5.1 能否给充足理由
+### 04.避免重构失败
+#### 4.1 能否给充足理由
 - 为何要这样重构
     - 如果自己很难讲清楚，或者给出的理由都比较牵强，没有压倒性的优势，那基本上就可以断定这是一种过度设计，是为了设计而设计。
 
 
-#### 5.2 乱套设计模式
+#### 4.2 乱套设计模式
 - 不假思索地套用学过的设计模式
     - 看到某个场景之后，觉得跟之前在某本书中看到的某个设计模式的应用场景很相似，就套用上去，也不考虑到底合不合适。
     - 最后如果有人问起了，就再找几个不痛不痒、很不具体的伪需求来搪塞，比如提高了代码的扩展性、满足了开闭原则等等。
 
 
 
-#### 5.3 先有问题后改造
+#### 4.3 先有问题后改造
 - 先遇到问题然后再改造
     - 从问题讲起，一步一步给你展示为什么要用某个设计模式，而不是一开始就告诉你最终的设计。
 - 看到某段代码之后能分析
@@ -212,8 +204,31 @@
 
 
 
+### 05.架构设计思考
+#### 5.1 针对复杂场景
+- 设计模式要干的事情就是解耦
+    - 也就是利用更好的代码结构将一大坨代码拆分成职责更单一的小类，让其满足高内聚低耦合等特性。
+    - 创建型模式是将创建和使用代码解耦，结构型模式是将不同的功能代码解耦，行为型模式是将不同的行为代码解耦。而解耦的主要目的是应对代码的复杂性。设计模式就是为了解决复杂代码问题而产生的。
+- 根据是否复杂投入时间
+    - 对于复杂代码，比如项目代码量多、开发周期长、参与开发的人员多，我们前期要多花点时间在设计上，越是复杂代码，花在设计上的时间就要越多。
+    - 如果你参与的只是一个简单的项目，代码量不多，开发人员也不多，那简单的问题用简单的解决方案就好，不要引入过于复杂的设计模式，将简单问题复杂化。
 
 
+#### 5.2 如何做架构设计
+- 架构设计要以实用为目的
+    - 不要光想着造一个世上最牛逼的架构，这样往往是不靠谱的，我们不是救世主。一切都是当前实际情况为主！
+- 总结下，架构设计有三个基本原则：
+    - 1、合适优于世界领先。适合自己当前业务的就好，不要总想搞领先的架构，比如一个用户量100万的App，光想着对标微信的架构，适合微信的架构未必适合自己。
+    - 2、简单优于复杂。如同写代码一样，代码量越少越简单越好，架构设计也是一样，越简单的架构越容易看懂和维护。
+    - 3、演进优于一步到位。可扩展性我们当然要考虑，但是人不是神，无论你怎么去预测未来的系统演进，总是很大可能会失算。所以架构设计优先解决当下的问题，至于后来的问题，到时候再对架构方案进行改进。
+- 这三个原则也是有优先级的
+    - 具体是：合适优于先进 > 演化优于一步到位 > 简单优于复杂
+    - 合适也就是适应当前需要是首位的，连当前需求都满足不了谈不到其他。架构整体发展是要不断演进的，在这个大前提下，尽量追求简单，但也有该复杂的时候，就要复杂，比如生物从单细胞一直演化到如今，复杂是避免不了的。
+
+
+
+### 开源项目：https://github.com/yangchong211/YCAppTool
+### 开源博客：https://github.com/yangchong211/YCBlogs
 
 
 
