--- a/Read/ReadMeWiki/04.架构设计/04.设计模式准则详谈.md
+++ b/Read/ReadMeWiki/04.架构设计/04.设计模式准则详谈.md
@@ -1,2 +1,34 @@
 #### 目录介绍
 - 01.面向对象六大原则
+- 02.单一职责原则介绍
+
+
+
+
+### 01.面向对象六大原则
+- 单一职责原则
+    - 指一个类的功能要单一，不能包罗万象。
+- 开放封闭原则
+    - 指一个模块在扩展性方面应是开放的，在更改性方面应是封闭的
+- 替换原则
+    - 子类应当可以替换父类，并出现在父类能够出现的任何位置
+- 依赖原则
+    - 具体依赖抽象，上层依赖下层
+- 接口分离原则
+    - 模块间要通过抽象接口隔开，而不是通过具体的类强行耦合起来。
+- 迪米特法则
+    - 最少知道原则是指：一个实体应当尽量少地与其他实体之间发生相互作用，使得系统功能模块相对独立。
+
+
+### 02.单一职责原则介绍
+#### 2.1 先思考几个问题
+
+
+
+
+
+
+
+
+
+
