--- a/Read/ReadShareWiki/00.心怡宝贝/02.心怡的梦想清单.md
+++ b/Read/ReadShareWiki/00.心怡宝贝/02.心怡的梦想清单.md
@@ -11,7 +11,22 @@
 
 
 
+### 01.个人的目标
+- 希望能够去县城高中
+    - 希望能够通过自己的努力去县城高中教书
 
+
+### 03.短期的规划
+
+
+
+### 04.长期的规划
+
+
+### 05.存储的规划
+- 成家后存储
+    - 日常开销：要保证3到6个月的流动资金
+    - 
 
 
 ### 06.保险的规划
