--- a/Read/ReadMeWiki/04.架构设计/04.设计模式准则详谈.md
+++ b/Read/ReadMeWiki/04.架构设计/04.设计模式准则详谈.md
@@ -9,11 +9,11 @@
 - 单一职责原则
     - 指一个类的功能要单一，不能包罗万象。
 - 开放封闭原则
-    - 指一个模块在扩展性方面应是开放的，在更改性方面应是封闭的
+    - 指一个模块在扩展性方面应是开放的，在更改性方面应是封闭的。
 - 替换原则
-    - 子类应当可以替换父类，并出现在父类能够出现的任何位置
+    - 子类应当可以替换父类，并出现在父类能够出现的任何位置。
 - 依赖原则
-    - 具体依赖抽象，上层依赖下层
+    - 具体依赖抽象，上层依赖下层。
 - 接口分离原则
     - 模块间要通过抽象接口隔开，而不是通过具体的类强行耦合起来。
 - 迪米特法则
@@ -22,6 +22,20 @@
 
 ### 02.单一职责原则介绍
 #### 2.1 先思考几个问题
+- 01.如何理解类的单一指责，单一指责中这个单一是如何评判的？
+- 02.懂了，但是会用么，或者实际开发中有哪些运用，能否举例说明单一职责优势？
+- 03.单一指责是否设计越单一，越好呢？说出你的缘由和论证的思路想法？
+- 04.单一职责原则，除了应用到类的设计上，还能延伸到哪些其他设计方面吗？
+
+
+
+#### 2.2 如何理解单一职责
+- 单一职责原则的定义描述非常简单，也不难理解。
+    - 一个类只负责完成一个职责或者功能。也就是说，不要设计大而全的类，要设计粒度小、功能单一的类。
+    - 换个角度来讲就是，一个类包含了两个或者两个以上业务不相干的功能，那我们就说它职责不够单一，应该将它拆分成多个功能更加单一、粒度更细的类。
+- 举一个例子来解释一下。
+    - 比如，一个类里既包含订单的一些操作，又包含用户的一些操作。而订单和用户是两个独立的业务领域模型，我们将两个不相干的功能放到同一个类中，那就违反了单一职责原则。
+    - 为了满足单一职责原则，我们需要将这个类拆分成两个粒度更细、功能更加单一的两个类：订单类和用户类。
 
 
 
