--- a/Read/ReadVideoWiki/00.方案实践/04.视频边播边缓存分析.md
+++ b/Read/ReadVideoWiki/00.方案实践/04.视频边播边缓存分析.md
@@ -6,11 +6,19 @@
     - 1.3 基础概念介绍
     - 1.4 设计目标
     - 1.5 产生收益分析
-- 02.致敬优秀开源项目
-    - 2.1 项目简单介绍
-    - 2.2 项目如何使用
-    - 2.3 项目缓存原理
-    - 2.4 整体设计思路
+- 02.方案调研与分析
+    - 2.1 实践方案有哪些
+    - 2.2 文件整体缓存
+    - 2.3 修改源码缓存
+    - 2.4 缓存代理方案
+- 03.设计方案演进
+    - 3.1 考量常见缓存策略
+    - 3.2 
+- 04.致敬优秀开源项目
+    - 4.1 项目简单介绍
+    - 4.2 项目如何使用
+    - 4.3 项目缓存原理
+    - 4.4 整体设计思路
 - 03.原理流程分析
     - 3.1 一些核心类分析
 - 03.如何实现预加载
@@ -20,12 +28,58 @@
 
 ### 01.整体概述
 #### 1.1 项目背景
+- 三方播放器都自带完善的缓存功能
+    - 但对于内容和形式都日新月异的一众互联网产品来说，想要打造完美契合自家产品的用户体验，播放器自身的缓存机制已逐渐无法满足需求。
+- 渴望视频上下切换能无缝切换
+    -  在播放短视频内容时，保证浏览、上下切换时 无缝链接 般丝滑的用户体验，可以说是重中之重的性能要求。因此要做边播边缓存的功能！
+
 
 
 #### 1.2 遇到问题
 - 边播边缓存
     - 一些知名的视频app客户端（优酷，爱奇艺）播放视频的时候都有一些缓存进度(二级进度缓存)，微信有关的小视频，还有一些短视频app，都有边播边缓的处理。
     - 还有就是当文件缓存完毕了再次播放的话就不再请求网络了直接播放本地文件了。既节省了流程又提高了加载速度。
+
+
+
+#### 1.3 基础概念介绍
+
+
+
+#### 1.4 设计目标
+
+
+
+#### 1.5 产生收益分析
+
+
+### 02.方案调研与分析
+#### 2.1 实践方案有哪些
+
+
+
+#### 2.2 文件整体缓存
+- 最简单的缓存方案
+    - 先下再播 ，只有文件完整下载完毕，才能进行播放。在某些特殊的业务场景，这种方案简单、粗暴但却 有效。
+- 举一些实际的场景
+    - 比如微信聊天中的小视频，经过限制时长以及高效的压缩算法，视频整体被压缩的非常小，对于 4G 早已覆盖的用户群体而言，加载、播放视频整个流程中几乎不受影响。
+- 有些场景该方案不合适
+    - 诸如短视频、播放音乐，这种方案就不太适合，更不论电视剧、电影这类更重的应用场景了。
+
+
+#### 2.3 修改源码缓存
+- 基于播放器源码进行修改
+    - 优势在于简洁直接，能够以较低开发成本满足业务需求，要求要搞透彻源码原理。对开发有一定高度要求！
+- 缺点也比较明显
+    - 当播放器为三方SDK时，源码修改成本变高，同时，当需要替换播放器SDK时，需针对缓存机制重新开发。
+    - 其次，缓存机制不可避免会涉及实际业务，这会提升业务层与底层播放能力之间的耦合。
+
+
+#### 2.4 缓存代理方案
+- 什么叫做缓存代理方案
+    - 期望能够在 业务层 和 播放器层 之间搭建一个中间商，由这个新的角色 代理 与业务层的通信，然后 分发 与 执行 播放器层的音视频缓存任务。
+- 长远的架构设计考虑
+    - 额外定义一个 缓存层 是很有必要的，这意味着容易实现和扩展 更多细节性的需求；比如同时针对多个音视频进行缓存、针对不同优先级缓存任务速度的限制策略等等。
 
 
 
@@ -37,6 +91,7 @@
     - 文件的缓存超过限制后没有按照lru算法删除，
     - 处理返回给播放器的http响应头消息，响应头消息的获取处理改为head请求（需服务器支持）
     - 替换网络库为okHttp（因为大部分的项目都是以okHttp为网络请求库的），但是这个改动性比较大
+
 
 #### 2.2 项目如何使用
 - 然后看一下怎么使用，超级简单。传入视频url链接，返回一个代理链接，然后就可以呢
