--- a/Read/ReadVideoWiki/01.原理知识/12.TextureView深入学习.md
+++ b/Read/ReadVideoWiki/01.原理知识/12.TextureView深入学习.md
@@ -13,7 +13,45 @@
 
 
 ### 01.先来思考几个问题
+- 首先思考几个问题
+    - 官方后续提供了 TextureView 以替换 SurfaceView，这个主要是基于什么考虑的？
+    - TextureView 是如何支持移动、旋转、缩放等动画，它究竟是怎么实现的？
+- TextureView分析需要带着问题去看待
+    - TextureView 相比 SurfaceView性能如何，为什么性能还会下降，基于什么维度这样说？
+    - TextureView 的设计初衷是为了解决什么问题？
 
+
+
+### 02.Android图形架构
+
+
+
+
+### 03.TextureView来由
+
+
+
+### 04.TextureView设计
+
+
+
+### 05.TextureView架构
+
+
+
+### 06.TextureView施工
+
+
+
+### 07.TextureView反思
+
+
+
+### 08.TextureView源码
+
+
+
+### 09.TextureView问题
 
 
 
