feat：完善dataStoreCache数据存储功能

--- a/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
@@ -10,6 +10,7 @@
     - 2.2 缓存策略有哪些
     - 2.3 常见存储方案
     - 2.4 存储方案优缺点
+    - 2.5 存储数据迁移
     - 2.6 存储如何优化
     - 2.7 使用缓存注意点
 - 03.存储方案原理
@@ -23,14 +24,13 @@
 - 04.通用缓存方案思路
     - 4.1 如何兼容不同缓存
     - 4.2 打造通用缓存Api
-    - 4.3 一键切换不同缓存方式
+    - 4.3 切换不同缓存方式
     - 4.4 缓存的过期处理
     - 4.5 缓存的阀值处理
     - 4.6 缓存的线程安全性
     - 4.7 缓存数据的迁移
     - 4.8 缓存数据加密
     - 4.9 各种缓存效率对比
-    - 4.10 任务排期和落地
 - 05.方案基础设计
     - 5.1 整体架构图
     - 5.2 UML设计图
@@ -50,17 +50,19 @@
     - 7.2 初始化缓存库
     - 7.3 无缝切换各种缓存方案
     - 7.4 数据的存和取
+    - 7.5 线程安全考量
 - 08.其他说明介绍
     - 8.1 遇到的坑分析
     - 8.2 遗留的问题
     - 8.3 未来的规划
-    - 8.4 参考链接
+    - 8.4 参考链接记录
 
 
 
 ### 01.整体概述说明
 #### 1.1 项目背景介绍
-- 项目中很多地方使用缓存方案，有的用sp，有的用mmkv，有的用lru，有的用DataStore，有的用sqlite，如何打造通用api切换操作不同存储方案？缓存方案众多，且各自使用场景有差异，如何选择合适的缓存方式？
+- 项目中很多地方使用缓存方案，有的用sp，有的用mmkv，有的用lru，有的用DataStore，有的用sqlite，如何打造通用api切换操作不同存储方案？
+- 缓存方案众多，且各自使用场景有差异，如何选择合适的缓存方式？同时思考如何替换之前老的存储方案，而不用花费很大的时间成本！
 - 针对不同的业务场景，不同的缓存方案。打造一套通用的方案，屏蔽各种缓存方式的差异性，暴露给外部开发者统一的API，简化使用，提高开发效率和使用效率……
 
 
@@ -77,20 +79,27 @@
 
 
 #### 1.4 设计目标
-- 打造通用存储库：设计一个缓存通用方案，其次，它的结构需要很简单，因为很多地方需要用到，再次，它得线程安全。灵活切换不同的缓存方式，使用简单。
-- 内部开源该库：作为技术沉淀，当作专项来推动进展。高复用低耦合，便于拓展，可快速移植，解决各个项目使用内存缓存，sp，mmkv，sql，lru，DataStore的凌乱。抽象一套统一的API接口。
+- 打造通用存储库：
+    - 设计一个缓存通用方案，其次，它的结构需要很简单，因为很多地方需要用到，再次，它得线程安全。灵活切换不同的缓存方式，使用简单。
+- 内部开源该库：
+    - 作为技术沉淀，当作专项来推动进展。高复用低耦合，便于拓展，可快速移植，解决各个项目使用内存缓存，sp，mmkv，sql，lru，DataStore的凌乱。抽象一套统一的API接口。
 
 
 #### 1.5 产生收益分析
-- 统一缓存API兼容不同存储方案：打造通用api，抹平了sp，mmkv，sql，lru，dataStore等各种方案的差异性。简化开发者使用
+- 统一缓存API兼容不同存储方案
+    - 打造通用api，抹平了sp，mmkv，sql，lru，dataStore等各种方案的差异性。简化开发者使用，功能强大而使用简单！
 
 
 ### 02.市面存储方案
 #### 2.1 缓存存储有哪些
-- 比较常见的是内存缓存以及磁盘缓存。内存缓存：这里的内存主要指的存储器缓存；磁盘缓存：这里主要指的是外部存储器，手机的话指的就是存储卡
-- 内存缓存：通过预先消耗应用的一点内存来存储数据，便可快速的为应用中的组件提供数据，是一种典型的以空间换时间的策略。
-- 磁盘缓存：读取磁盘文件要比直接从内存缓存中读取要慢一些，而且需要在一个UI主线程外的线程中进行，因为磁盘的读取速度是不能够保证的，磁盘文件缓存显然也是一种以空间换时间的策略。
-- 二级缓存：内存缓存和磁盘缓存结合。比如，LruCache将图片保存在内存，存取速度较快，退出APP后缓存会失效；而DiskLruCache将图片保存在磁盘中，下次进入应用后缓存依旧存在，它的存取速度相比LruCache会慢上一些。
+- 比较常见的是内存缓存以及磁盘缓存。
+    - 内存缓存：这里的内存主要指的存储器缓存；磁盘缓存：这里主要指的是外部存储器，手机的话指的就是存储卡。
+- 内存缓存：
+    - 通过预先消耗应用的一点内存来存储数据，便可快速的为应用中的组件提供数据，是一种典型的以空间换时间的策略。
+- 磁盘缓存：
+    - 读取磁盘文件要比直接从内存缓存中读取要慢一些，而且需要在一个UI主线程外的线程中进行，因为磁盘的读取速度是不能够保证的，磁盘文件缓存显然也是一种以空间换时间的策略。
+- 二级缓存：
+    - 内存缓存和磁盘缓存结合。比如，LruCache将图片保存在内存，存取速度较快，退出APP后缓存会失效；而DiskLruCache将图片保存在磁盘中，下次进入应用后缓存依旧存在，它的存取速度相比LruCache会慢上一些。
 
 
 
@@ -120,9 +129,12 @@
     - SqlLite：移动端轻量级数据库
     - DataStore：旨在替代原有的 SharedPreferences，支持SharedPreferences数据的迁移
     - Room：支持大型或复杂数据集
+    - Realm：支持大型或复杂数据集
 - 其他开源缓存库
     - ACache：一款高效二级存储库，采用内存缓存和磁盘缓存
 
+
+#### 2.5 存储数据迁移
 
 
 #### 2.6 存储如何优化
@@ -188,7 +200,7 @@
 #### 4.2 打造通用缓存Api
 
 
-#### 4.3 一键切换不同缓存方式
+#### 4.3 切换不同缓存方式
 
 
 #### 4.4 缓存的过期处理
@@ -210,7 +222,6 @@
 
 #### 4.9 各种缓存效率对比
 
-#### 4.10 任务排期和落地
 
 
 ### 05.方案基础设计
@@ -275,16 +286,12 @@
 #### 8.3 未来的规划
 
 
-#### 8.4 参考链接
-
-
-
-
-#### 参考
+#### 8.4 参考链接记录
 - 自己撸一个FastKV
     - https://mp.weixin.qq.com/s/D24KZ2YxLiL6r4EXrMqgyg
 - 腾讯MMKV的原理与实现
     - https://www.jianshu.com/p/c774ad91379c
+    - https://github.com/Tencent/MMKV/wiki
 - MMKV缺陷：不支持getAll?
     - https://juejin.cn/post/6939473558259105805/
 - MMKV, DataStore, 数据库, Sp 性能大比拼
