--- a/Read/ReadShareWiki/00.综合专项/03.重构实践专项.md
+++ b/Read/ReadShareWiki/00.综合专项/03.重构实践专项.md
@@ -10,7 +10,8 @@
     - 2.2 规划重构节点
     - 2.3 重构架构分层
     - 2.4 重要流程图
-
+- 03.重构关键节点
+    - 3.1 罗列关键节点
 
 
 
@@ -27,6 +28,8 @@
     
 
 #### 1.3 重构的目的
+- 思考一下本次重构的目的
+    - 是为了提高代码的维护，还是为了使用新技术，又或者是为了业务解耦合。详细说明重构的目的。
 
 
 #### 1.4 设计目标
