feat：完善耗时打点器库

--- a/Read/ReadMeWiki/04.架构设计/08.面向对象设计思想.md
+++ b/Read/ReadMeWiki/04.架构设计/08.面向对象设计思想.md
@@ -1,7 +1,8 @@
 # 面向对象设计思想
 #### 目录介绍
 - 01.一些基础的概念
-
+- 02.面向对象四大特性
+- 03.面向对象和过程
 
 
 
@@ -14,29 +15,181 @@
     - 面向对象编程语言是支持类或对象的语法机制，并有现成的语法机制，能方便地实现面向对象编程四大特性（封装、抽象、继承、多态）的编程语言。
 - 如何判定一个编程语言是否是面向对象编程语言？
     - 如果按照严格的的定义，需要有现成的语法支持类、对象、四大特性才能叫作面向对象编程语言。
-    - 如果放宽要求的话，只要某种编程语言支持类、对象语法机制，那基本上就可以说这种编程语言是面向对象编程语言了，不一定非得要求具有所有的四大特性。
+    - 如果放宽要求的话，只要某种编程语言支持类、对象语法机制，那基本上就可以说这种编程语言是面向对象编程语言，不一定非得要求具有所有的四大特性。
 
 
 
+### 02.面向对象四大特性
+#### 2.1 封装的特性
+- 什么是封装的特性
+    - 封装也叫作信息隐藏或者数据访问保护。类通过暴露有限的访问接口，授权外部仅能通过类提供的方式（或者叫函数）来访问内部信息或者数据。
+- 封装的意义是什么？它能解决什么编程问题？
+    - 如果我们对类中属性的访问不做限制，那任何代码都可以访问、修改类中的属性，虽然这样看起来更加灵活，但从另一方面来说，过度灵活也意味着不可控，属性可以随意被以各种奇葩的方式修改，而且修改逻辑可能散落在代码中的各个角落，势必影响代码的可读性、可维护性。
+    - 类仅仅通过有限的方法暴露必要的操作，也能提高类的易用性。
+- 封装还可以减少外部调用错误的概率
+    - 将属性封装起来，暴露少许的几个必要的方法给调用者使用，调用者就不需要了解太多背后的业务细节，用错的概率就减少很多。
+    - 这就好比，如果一个冰箱有很多按钮，你就要研究很长时间，还不一定能操作正确。相反，如果只有几个必要的按钮，比如开、停、调节温度，你一眼就能知道该如何来操作，而且操作出错的概率也会降低很多。
 
 
 
+#### 2.2 抽象思想
+- 什么是抽象特性
+    - 封装主要讲的是如何隐藏信息、保护数据，而抽象讲的是如何隐藏方法的具体实现，让调用者只需要关心方法提供了哪些功能，并不需要知道这些功能是如何实现的。
+    - 常借助编程语言提供的接口类（比如 Java 中的 interface 关键字语法）或者抽象类（比如 Java 中的 abstract 关键字语法）这两种语法机制，来实现抽象这一特性。
+- 对于抽象这个特性，举一个例子来进一步解释一下。
+    - 利用 Java 中的 interface 接口语法来实现抽象特性。调用者在使用图片存储功能的时候，只需要了解 IPictureStorage 这个接口类暴露了哪些方法就可以了，不需要去查看 PictureStorage 类里的具体实现逻辑。
+    ``` java
+    public interface IPictureStorage {
+      void savePicture(Picture picture);
+      Image getPicture(String pictureId);
+      void deletePicture(String pictureId);
+      void modifyMetaInfo(String pictureId, PictureMetaInfo metaInfo);
+    }
+    
+    public class PictureStorage implements IPictureStorage {
+      // ...省略其他属性...
+      @Override
+      public void savePicture(Picture picture) { ... }
+      @Override
+      public Image getPicture(String pictureId) { ... }
+      @Override
+      public void deletePicture(String pictureId) { ... }
+      @Override
+      public void modifyMetaInfo(String pictureId, PictureMetaInfo metaInfo) { ... }
+    }
+    ```
+- 抽象这个概念是一个非常通用的设计思想
+    - 不单单用在面向对象编程中，也可以用来指导架构设计等。而且这个特性也并不需要编程语言提供特殊的语法机制来支持，只需要提供“函数”这一非常基础的语法机制，就可以实现抽象特性、所以，它没有很强的“特异性”，有时候并不被看作面向对象编程的特性之一。
+- 抽象的意义是什么？它能解决什么编程问题？
+    - 一方面是提高代码的可扩展性、维护性，修改实现不需要改变定义，减少代码的改动范围；另一方面，它也是处理复杂系统的有效手段，能有效地过滤掉不必要关注的信息。
+
+
+#### 2.3 继承特性
+- 关于继承特性
+    - 继承是用来表示类之间的 is-a 关系，分为两种模式：单继承和多继承。单继承表示一个子类只继承一个父类，多继承表示一个子类可以继承多个父类。
+    - 为了实现继承这个特性，编程语言需要提供特殊的语法机制来支持。继承主要是用来解决代码复用的问题。
 
 
 
+#### 2.4 多态特性
 
 
 
+### 03.面向对象和过程
+#### 3.1 看一个代码案例
+- 首先，我们先来看，用面向过程这种编程风格写出来的代码是什么样子的。注意，下面的代码是用 C 语言这种面向过程的编程语言来编写的。
+    ```c
+    struct User {
+      char name[64];
+      int age;
+      char gender[16];
+    };
+    
+    struct User parse_to_user(char* text) {
+      // 将text(“小王&28&男”)解析成结构体struct User
+    }
+    
+    char* format_to_text(struct User user) {
+      // 将结构体struct User格式化成文本（"小王\t28\t男"）
+    }
+    
+    void sort_users_by_age(struct User users[]) {
+      // 按照年龄从小到大排序users
+    }
+    
+    void format_user_file(char* origin_file_path, char* new_file_path) {
+      // open files...
+      struct User users[1024]; // 假设最大1024个用户
+      int count = 0;
+      while(1) { // read until the file is empty
+        struct User user = parse_to_user(line);
+        users[count++] = user;
+      }
+      
+      sort_users_by_age(users);
+      
+      for (int i = 0; i < count; ++i) {
+        char* formatted_user_text = format_to_text(users[i]);
+        // write to new file...
+      }
+      // close files...
+    }
+    
+    int main(char** args, int argv) {
+      format_user_file("/home/zheng/user.txt", "/home/zheng/formatted_users.txt");
+    }
+    ```
+- 再来看，用面向对象这种编程风格写出来的代码是什么样子的。注意，下面的代码是用 Java 这种面向对象的编程语言来编写的。
+    ```java
+     public class User {
+      private String name;
+      private int age;
+      private String gender;
+      
+      public User(String name, int age, String gender) {
+        this.name = name;
+        this.age = age;
+        this.gender = gender;
+      }
+      
+      public static User praseFrom(String userInfoText) {
+        // 将text(“小王&28&男”)解析成类User
+      }
+      
+      public String formatToText() {
+        // 将类User格式化成文本（"小王\t28\t男"）
+      }
+    }
+    
+    public class UserFileFormatter {
+      public void format(String userFile, String formattedUserFile) {
+        // Open files...
+        List users = new ArrayList<>();
+        while (1) { // read until file is empty 
+          // read from file into userText...
+          User user = User.parseFrom(userText);
+          users.add(user);
+        }
+        // sort users by age...
+        for (int i = 0; i < users.size(); ++i) {
+          String formattedUserText = user.formatToText();
+          // write to new file...
+        }
+        // close files...
+      }
+    }
+    
+    public class MainApplication {
+      public static void main(Sring[] args) {
+        UserFileFormatter userFileFormatter = new UserFileFormatter();
+        userFileFormatter.format("/home/zheng/users.txt", "/home/zheng/formatted_users.txt");
+      }
+    }
+    ```
+- 从上面的代码中，可以看出，面向过程和面向对象最基本的区别就是，代码的组织方式不同。
+    - 面向过程风格的代码被组织成了一组方法集合及其数据结构（struct User），方法和数据结构的定义是分开的。
+    - 面向对象风格的代码被组织成一组类，方法和数据结构被绑定一起，定义在类中。
 
 
+#### 3.2 理解面向过程
+- 什么是面向过程编程？什么是面向过程编程语言？
+    - 实际上，面向过程编程和面向过程编程语言并没有严格的官方定义。理解这两个概念最好的方式是跟面向对象编程和面向对象编程语言进行对比。
+    - 相较于面向对象编程以类为组织代码的基本单元，面向过程编程则是以过程（或方法）作为组织代码的基本单元。它最主要的特点就是数据和方法相分离。相较于面向对象编程语言，面向过程编程语言最大的特点就是不支持丰富的面向对象编程特性，比如继承、多态、封装。
 
 
+#### 3.3 面向对象优势
+- 面向对象编程相比面向过程编程有哪些优势？面向对象编程相比起面向过程编程的优势主要有三个。
+    - 对于大规模复杂程序的开发，程序的处理流程并非单一的一条主线，而是错综复杂的网状结构。面向对象编程比起面向过程编程，更能应对这种复杂类型的程序开发。
+    - 面向对象编程相比面向过程编程，具有更加丰富的特性（封装、抽象、继承、多态）。利用这些特性编写出来的代码，更加易扩展、易复用、易维护。
+    - 从编程语言跟机器打交道的方式的演进规律中，可以总结出：面向对象编程语言比起面向过程编程语言，更加人性化、更加高级、更加智能。
 
 
-
-
-
-
+#### 3.4 滥用面向对象
+- 面向对象封装的定义是：
+    - 通过访问权限控制，隐藏内部数据，外部仅能通过类提供的有限的接口访问、修改内部数据。
+- 从表面上看似是面向对象编程风格的代码，从本质上看却是面向过程编程风格的。
+    - 滥用getter和setter方法：给每个属性都定义 getter、setter 方法的时候，它违反了面向对象编程的封装特性，相当于将面向对象编程风格退化成了面向过程编程风格。
+    - 滥用全局变量：
 
 
 
