feat：完善时间管理

--- a/Read/ReadShareWiki/00.综合专项/07.时间管理模板.md
+++ b/Read/ReadShareWiki/00.综合专项/07.时间管理模板.md
@@ -1,7 +1,7 @@
 #### 目录介绍
 - 01.时间管理背景
     - 1.1 背景说明
-    - 1.2 GTD管理
+    - 1.2 时间方式说明
 - 02.收集信息
     - 清空大脑
     - 联想
@@ -27,6 +27,11 @@
 
 
 ### 01.时间管理背景
+#### 1.2 时间方式说明
+
+
+
+
 #### GTD时间管理
 - "GTD（Getting Things Done），意思是“把需要做的事情处理好”。GTD时间管理法的核心理念在于清空大脑，然后一步步按照设定的路线去努力执行。"
 
