--- a/Read/ReadShareWiki/02.计划管理/02.计划拆分为任务.md
+++ b/Read/ReadShareWiki/02.计划管理/02.计划拆分为任务.md
@@ -108,7 +108,8 @@
 
 ### 07.任务时间的特性
 - 研究这一点是非常关键的，任务的时间特性包括完成任务的总时长，注意完成任务的总时长是精确到小时而不是天，任务的时间特性还包括完成任务时间的连续性和分散性。
-- 比如学习英语目标里面有一个任务是背诵新概念英语课文，那么可不可以短期集中所有业余时间来完成这个任务呢，答案是不合适的，因为一方面短期集中时间进行大量背诵是会让人产生厌倦感的另一方面背诵课文具有遗忘性如果短期集中时间强行背诵下来了那么时间拉长还是会很快遗忘的，因此背诵课文是不能短期集中时间毕其功于一役的，而应该是将学习总时长尽可能分散到长期的每一天，采取细水长流的方式。
+- 比如学习英语目标里面有一个任务是背诵新概念英语课文，那么可不可以短期集中所有业余时间来完成这个任务呢，答案是不合适的。
+- 因为一方面短期集中时间进行大量背诵是会让人产生厌倦感的另一方面背诵课文具有遗忘性如果短期集中时间强行背诵下来了那么时间拉长还是会很快遗忘的，因此背诵课文是不能短期集中时间毕其功于一役的，而应该是将学习总时长尽可能分散到长期的每一天，采取细水长流的方式。
 
 
 
