--- a/Read/ReadMeWiki/04.架构设计/08.面向对象设计思想.md
+++ b/Read/ReadMeWiki/04.架构设计/08.面向对象设计思想.md
@@ -3,7 +3,9 @@
 - 01.一些基础的概念
 - 02.面向对象四大特性
 - 03.面向对象和过程
-
+- 04.抽象类和接口对比
+- 05.基于接口而非实现编程
+- 06.多用组合少继承
 
 
 ### 01.一些基础的概念
@@ -68,6 +70,10 @@
 - 关于继承特性
     - 继承是用来表示类之间的 is-a 关系，分为两种模式：单继承和多继承。单继承表示一个子类只继承一个父类，多继承表示一个子类可以继承多个父类。
     - 为了实现继承这个特性，编程语言需要提供特殊的语法机制来支持。继承主要是用来解决代码复用的问题。
+- 关于继承复用代码讨论
+    - 如果我们有两个类 A 和 B，它们要用到一块相同的功能逻辑，为了避免代码重复不应该在两个类中，将这个相同的功能逻辑，重复地实现两遍。这个时候我们该怎么办呢？
+    - 利用继承特性，我们把相同的属性和方法，抽取出来，定义到父类中。子类复用父类中的属性和方法，达到代码复用的目的。
+    - 如何A和B既不是父子关系，也不是兄弟关系，仅仅为了代码复用，生硬地抽象出一个父类C出来，会影响到代码的可读性。这时候可以抽取为Utils类。
 
 
 
@@ -189,17 +195,62 @@
     - 通过访问权限控制，隐藏内部数据，外部仅能通过类提供的有限的接口访问、修改内部数据。
 - 从表面上看似是面向对象编程风格的代码，从本质上看却是面向过程编程风格的。
     - 滥用getter和setter方法：给每个属性都定义 getter、setter 方法的时候，它违反了面向对象编程的封装特性，相当于将面向对象编程风格退化成了面向过程编程风格。
-    - 滥用全局变量：
 
 
 
+### 04.抽象类和接口对比
+- 抽象类和接口的语法特性
+    - 抽象类不允许被实例化，只能被继承。它可以包含属性和方法。方法既可以包含代码实现，也可以不包含代码实现。不包含代码实现的方法叫作抽象方法。子类继承抽象类，必须实现抽象类中的所有抽象方法。
+    - 接口不能包含属性，只能声明方法，方法不能包含代码实现。类实现接口的时候，必须实现接口中声明的所有方法。
+- 抽象类和接口存在的意义
+    - 抽象类是对成员变量和方法的抽象，是一种 is-a 关系，是为了解决代码复用问题。
+    - 接口仅仅是对方法的抽象，是一种 has-a 关系，表示具有某一组行为特性，是为了解决解耦问题，隔离接口和具体的实现，提高代码的扩展性。
+- 抽象类和接口的应用场景区别
+    - 什么时候该用抽象类？什么时候该用接口？实际上，判断的标准很简单。
+    - 如果要表示一种 is-a 的关系，并且是为了解决代码复用问题，我们就用抽象类；如果要表示一种 has-a 关系，并且是为了解决抽象而非代码复用问题，那我们就用接口。
+    - 从类的继承层次上来看，抽象类是一种自下而上的设计思路，先有子类的代码重复，然后再抽象成上层的父类（也就是抽象类）。
+    - 而接口正好相反，它是一种自上而下的设计思路。我们在编程的时候，一般都是先设计接口，再去考虑具体的实现。
+
+
+### 05.基于接口而非实现编程
+- 如何理解基于接口而非实现编程
+    - 理解其中的“接口”两个字。从本质上来看，“接口”就是一组“协议”或者“约定”，是功能提供者提供给使用者的一个“功能列表”。
+    - 如果落实到具体的编码，“基于接口而非实现编程”这条原则中的“接口”，可以理解为编程语言中的接口或者抽象类。
+- 这条准则能提高代码质量
+    - 可以将接口和实现相分离，封装不稳定的实现，暴露稳定的接口。上游系统面向接口而非实现编程，不依赖不稳定的实现细节，这样当实现发生变化的时候，上游系统的代码基本上不需要做改动，以此来降低耦合性，提高扩展性。
+- 在做软件开发的时候，一定要有抽象意识、封装意识、接口意识。
+    - 在定义接口的时候，不要暴露任何实现细节。接口的定义只表明做什么，而不是怎么做。而且，在设计接口的时候，要多思考一下，这样的接口设计是否足够通用，是否能够做到在替换具体的接口实现的时候，不需要任何接口定义的改动。
 
 
 
+### 06.多用组合少继承
+#### 6.1 为何不推荐使用继承
+- 继承是面向对象的四大特性之一，用来表示类之间的 is-a 关系，可以解决代码复用的问题。
+    - 虽然继承有诸多作用，但继承层次过深、过复杂，也会影响到代码的可维护性。所以，对于是否应该在项目中使用继承，网上有很多争议。
+    - 很多人觉得继承是一种反模式，应该尽量少用，甚至不用。为什么会有这样的争议？
+- 假设我们要设计一个关于鸟的类。我们将“鸟类”这样一个抽象的事物概念，定义为一个抽象类 AbstractBird。
+    - 所有更细分的鸟，比如麻雀、鸽子、乌鸦等，都继承这个抽象类。大部分鸟都会飞，那我们可不可以在 AbstractBird 抽象类中，定义一个 fly() 方法呢？
+    - 答案是否定的。尽管大部分鸟都会飞，但也有特例，比如鸵鸟就不会飞。鸵鸟继承具有 fly() 方法的父类，那鸵鸟就具有“飞”这样的行为，这显然不符合我们对现实世界中事物的认识。
+    - 因为除了鸵鸟之外，不会飞的鸟还有很多，比如企鹅。对于这些不会飞的鸟来说，都需要重写 fly() 方法，抛出异常。这样的设计，一方面，徒增了编码的工作量；另一方面，也违背了最小知识原则（Least Knowledge Principle，也叫最少知识原则或者迪米特法则），暴露不该暴露的接口给外部，增加了类使用过程中被误用的概率。
+
+
+#### 6.2 继承存在一定问题
+- 类的继承层次会越来越深、继承关系会越来越复杂。
+    - 而这种层次很深、很复杂的继承关系，一方面，会导致代码的可读性变差。因为我们要搞清楚某个类具有哪些方法、属性，必须阅读父类的代码、父类的父类的代码……一直追溯到最顶层父类的代码。
+    - 另一方面，这也破坏了类的封装特性，将父类的实现细节暴露给了子类。子类的实现依赖父类的实现，两者高度耦合，一旦父类代码修改，就会影响所有子类的逻辑。
+- 继承最大的问题就在于：
+    - 继承层次过深、继承关系过于复杂会影响到代码的可读性和可维护性。这也是为什么不推荐使用继承。那刚刚例子中继承存在的问题，又该如何来解决呢?
 
 
 
-
+#### 6.3 组合VS继承
+- 1.为什么不推荐使用继承？
+    - 继承是面向对象的四大特性之一，用来表示类之间的 is-a 关系，可以解决代码复用的问题。虽然继承有诸多作用，但继承层次过深、过复杂，也会影响到代码的可维护性。在这种情况下，我们应该尽量少用，甚至不用继承。
+- 2.组合相比继承有哪些优势？
+    - 继承主要有三个作用：表示 is-a 关系，支持多态特性，代码复用。而这三个作用都可以通过组合、接口、委托三个技术手段来达成。除此之外，利用组合还能解决层次过深、过复杂的继承关系影响代码可维护性的问题。
+- 3.如何判断该用组合还是继承？
+    - 尽管我们鼓励多用组合少用继承，但组合也并不是完美的，继承也并非一无是处。在实际的项目开发中，我们还是要根据具体的情况，来选择该用继承还是组合。
+    - 如果类之间的继承结构稳定，层次比较浅，关系不复杂，我们就可以大胆地使用继承。反之，我们就尽量使用组合来替代继承。除此之外，还有一些设计模式、特殊的应用场景，会固定使用继承或者组合。
 
 
 
