feat：完善代码库

--- a/Read/ReadMeWiki/04.架构设计/08.面向对象设计思想.md
+++ b/Read/ReadMeWiki/04.架构设计/08.面向对象设计思想.md
@@ -18,7 +18,8 @@
 - 如何判定一个编程语言是否是面向对象编程语言？
     - 如果按照严格的的定义，需要有现成的语法支持类、对象、四大特性才能叫作面向对象编程语言。
     - 如果放宽要求的话，只要某种编程语言支持类、对象语法机制，那基本上就可以说这种编程语言是面向对象编程语言，不一定非得要求具有所有的四大特性。
-
+- 面向对象分析，设计和编程
+    - 面向对象分析就是要搞清楚做什么，面向对象设计就是要搞清楚怎么做，面向对象编程就是将分析和设计的的结果翻译成代码的过程。
 
 
 ### 02.面向对象四大特性
@@ -180,7 +181,8 @@
 #### 3.2 理解面向过程
 - 什么是面向过程编程？什么是面向过程编程语言？
     - 实际上，面向过程编程和面向过程编程语言并没有严格的官方定义。理解这两个概念最好的方式是跟面向对象编程和面向对象编程语言进行对比。
-    - 相较于面向对象编程以类为组织代码的基本单元，面向过程编程则是以过程（或方法）作为组织代码的基本单元。它最主要的特点就是数据和方法相分离。相较于面向对象编程语言，面向过程编程语言最大的特点就是不支持丰富的面向对象编程特性，比如继承、多态、封装。
+    - 相较于面向对象编程以类为组织代码的基本单元，面向过程编程则是以过程（或方法）作为组织代码的基本单元。它最主要的特点就是数据和方法相分离。
+    - 相较于面向对象编程语言，面向过程编程语言最大的特点就是不支持丰富的面向对象编程特性，比如继承、多态、封装。
 
 
 #### 3.3 面向对象优势
